// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should render Pagination cases: Pagination '2 pages' 1`] = `
<div>
  <nav
    aria-label="Pagination"
    class="usa-pagination"
    role="navigation"
  >
    <ol>
      <li>
        <a
          aria-label="Previous Page"
          class=""
          href="/1"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angle-left "
            data-icon="angle-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
              fill="currentColor"
            />
          </svg>
           Prev
        </a>
      </li>
      <li>
        <a
          aria-label="Page 1"
          class=""
          href="/1"
        >
          <span>
            1
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 2"
          class="is-active"
          href="/2"
        >
          <span>
            2
          </span>
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Pagination should render Pagination cases: Pagination '7 pages' 1`] = `
<div>
  <nav
    aria-label="Pagination"
    class="usa-pagination"
    role="navigation"
  >
    <ol>
      <li>
        <a
          aria-label="Previous Page"
          class=""
          href="/3"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angle-left "
            data-icon="angle-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
              fill="currentColor"
            />
          </svg>
           Prev
        </a>
      </li>
      <li>
        <a
          aria-label="Page 1"
          class=""
          href="/1"
        >
          <span>
            1
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 2"
          class=""
          href="/2"
        >
          <span>
            2
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 3"
          class=""
          href="/3"
        >
          <span>
            3
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 4"
          class="is-active"
          href="/4"
        >
          <span>
            4
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 5"
          class=""
          href="/5"
        >
          <span>
            5
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 6"
          class=""
          href="/6"
        >
          <span>
            6
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 7"
          class=""
          href="/7"
        >
          <span>
            7
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Next Page"
          class=""
          href="/5"
        >
          Next 
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angle-right "
            data-icon="angle-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"
              fill="currentColor"
            />
          </svg>
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Pagination should render Pagination cases: Pagination '10 pages' 1`] = `
<div>
  <nav
    aria-label="Pagination"
    class="usa-pagination"
    role="navigation"
  >
    <ol>
      <li>
        <a
          aria-label="Previous Page"
          class=""
          href="/7"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angle-left "
            data-icon="angle-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
              fill="currentColor"
            />
          </svg>
           Prev
        </a>
      </li>
      <li>
        <a
          aria-label="Page 1"
          class=""
          href="/1"
        >
          <span>
            1
          </span>
        </a>
      </li>
      <li
        aria-hidden="true"
      >
        …
      </li>
      <li>
        <a
          aria-label="Page 6"
          class=""
          href="/6"
        >
          <span>
            6
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 7"
          class=""
          href="/7"
        >
          <span>
            7
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 8"
          class="is-active"
          href="/8"
        >
          <span>
            8
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 9"
          class=""
          href="/9"
        >
          <span>
            9
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Page 10"
          class=""
          href="/10"
        >
          <span>
            10
          </span>
        </a>
      </li>
      <li>
        <a
          aria-label="Next Page"
          class=""
          href="/9"
        >
          Next 
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angle-right "
            data-icon="angle-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"
              fill="currentColor"
            />
          </svg>
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Pagination should render Pagination cases: Pagination 'undefined currentPage' 1`] = `
<div>
  <nav
    aria-label="Pagination"
    class="usa-pagination"
    role="navigation"
  >
    <ol>
      <li>
        <a
          aria-label="Page 1"
          class="is-active"
          href="/1"
        >
          <span>
            1
          </span>
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Pagination should render Pagination cases: Pagination 'with baseRoute' 1`] = `
<div>
  <nav
    aria-label="Pagination"
    class="usa-pagination"
    role="navigation"
  >
    <ol>
      <li>
        <a
          aria-label="Page 1"
          class="is-active"
          href="/patients/1"
        >
          <span>
            1
          </span>
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Pagination should render Pagination cases: Pagination 'with className' 1`] = `
<div>
  <nav
    aria-label="Pagination"
    class="usa-pagination unique-class-name"
    role="navigation"
  >
    <ol>
      <li>
        <a
          aria-label="Page 1"
          class="is-active"
          href="/1"
        >
          <span>
            1
          </span>
        </a>
      </li>
    </ol>
  </nav>
</div>
`;
